--- a/src/scss/_colors.scss
+++ b/src/scss/_colors.scss
@@ -7,3 +7,5 @@ $highlight: rgba(65, 246, 215, 1);
 
 
 $asideTextColor: rgba(27, 28, 33, 1);
+$paginationColorActive: rgba(181, 182, 188, 1);
+$paginationColor: rgba(221, 221, 221, 1);
